remaining execute support, enable warnings as errors

--- a/PulseGeneratorFirmware/Makefile
+++ b/PulseGeneratorFirmware/Makefile
@@ -1,9 +1,15 @@
 SOURCES = pulseStateMachine.o
 TEST_SOURCES = pulseStateMachine_test.o
 
+CXXFLAGS += -Wall -Werror
 
 test: run_tests
 	./run_tests
+
+clean:
+	rm -rf $(SOURCES)
+	rm -rf $(TEST_SOURCES)
+	rm -rf run_tests
 
 run_tests: $(SOURCES) $(TEST_SOURCES)
 	$(CXX) $(CXXFLAGS) -o run_tests $^
