Fix Arduino IDE compatibility
The Arduino IDE expects the .pde filename to match the directory name
and all of the .cpp files in that directory to be used by the program.
This commit moves and renames files so that the IDE's expectations are
met (so you can build the firmware from the IDE).

--- a/PulseGeneratorFirmware/Makefile
+++ b/PulseGeneratorFirmware/Makefile
@@ -1,5 +1,5 @@
 # the name of the main file and sources to be used
-APPNAME=PulseGenerator
+APPNAME=PulseGeneratorFirmware
 SOURCES=$(APPNAME).o pulseStateMachine.o
 TEST_SOURCES = pulseStateMachine_test.o
 
